src/parse/cc/CppDocParser.py
# Generated from gramm/cc/CppDocParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CppDocParser ( Parser ):

    grammarFileName = "CppDocParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'struct'", "'public'", "'private'", 
                     "'protected'", "'virtual'", "'static'", "'const'", 
                     "'inline'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'{'", "'}'", "'('", "')'", "';'", "':'", 
                     "','", "'*'", "'&'", "'<'", "'>'", "'='", "'~'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "STRUCT", "PUBLIC", "PRIVATE", 
                      "PROTECTED", "VIRTUAL", "STATIC", "CONST", "INLINE", 
                      "IDENT", "LINE_COMMENT", "BLOCK_COMMENT", "WS", "LBRACE", 
                      "RBRACE", "LPAREN", "RPAREN", "SEMI", "COLON", "COMMA", 
                      "STAR", "AMP", "LT", "GT", "EQ", "TILDE", "OTHER" ]

    RULE_translationUnit = 0
    RULE_declaration = 1
    RULE_classDeclaration = 2
    RULE_classKind = 3
    RULE_inheritance = 4
    RULE_inheritanceItem = 5
    RULE_classBody = 6
    RULE_classMember = 7
    RULE_accessSection = 8
    RULE_accessSpecifier = 9
    RULE_methodDeclaration = 10
    RULE_fieldDeclaration = 11
    RULE_parameterList = 12
    RULE_parameter = 13
    RULE_modifier = 14
    RULE_destructorOrName = 15
    RULE_typeName = 16
    RULE_typeSuffix = 17
    RULE_otherToken = 18

    ruleNames =  [ "translationUnit", "declaration", "classDeclaration", 
                   "classKind", "inheritance", "inheritanceItem", "classBody", 
                   "classMember", "accessSection", "accessSpecifier", "methodDeclaration", 
                   "fieldDeclaration", "parameterList", "parameter", "modifier", 
                   "destructorOrName", "typeName", "typeSuffix", "otherToken" ]

    EOF = Token.EOF
    CLASS=1
    STRUCT=2
    PUBLIC=3
    PRIVATE=4
    PROTECTED=5
    VIRTUAL=6
    STATIC=7
    CONST=8
    INLINE=9
    IDENT=10
    LINE_COMMENT=11
    BLOCK_COMMENT=12
    WS=13
    LBRACE=14
    RBRACE=15
    LPAREN=16
    RPAREN=17
    SEMI=18
    COLON=19
    COMMA=20
    STAR=21
    AMP=22
    LT=23
    GT=24
    EQ=25
    TILDE=26
    OTHER=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TranslationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CppDocParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppDocParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CppDocParser.DeclarationContext,i)


        def getRuleIndex(self):
            return CppDocParser.RULE_translationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslationUnit" ):
                listener.enterTranslationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslationUnit" ):
                listener.exitTranslationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranslationUnit" ):
                return visitor.visitTranslationUnit(self)
            else:
                return visitor.visitChildren(self)




    def translationUnit(self):

        localctx = CppDocParser.TranslationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_translationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268420102) != 0):
                self.state = 38
                self.declaration()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(CppDocParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(CppDocParser.ClassDeclarationContext,0)


        def otherToken(self):
            return self.getTypedRuleContext(CppDocParser.OtherTokenContext,0)


        def getRuleIndex(self):
            return CppDocParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = CppDocParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.classDeclaration()
                pass
            elif token in [10, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.otherToken()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classKind(self):
            return self.getTypedRuleContext(CppDocParser.ClassKindContext,0)


        def IDENT(self):
            return self.getToken(CppDocParser.IDENT, 0)

        def LBRACE(self):
            return self.getToken(CppDocParser.LBRACE, 0)

        def classBody(self):
            return self.getTypedRuleContext(CppDocParser.ClassBodyContext,0)


        def RBRACE(self):
            return self.getToken(CppDocParser.RBRACE, 0)

        def inheritance(self):
            return self.getTypedRuleContext(CppDocParser.InheritanceContext,0)


        def SEMI(self):
            return self.getToken(CppDocParser.SEMI, 0)

        def getRuleIndex(self):
            return CppDocParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = CppDocParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.classKind()
            self.state = 51
            self.match(CppDocParser.IDENT)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 52
                self.inheritance()


            self.state = 55
            self.match(CppDocParser.LBRACE)
            self.state = 56
            self.classBody()
            self.state = 57
            self.match(CppDocParser.RBRACE)
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 58
                self.match(CppDocParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassKindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CppDocParser.CLASS, 0)

        def STRUCT(self):
            return self.getToken(CppDocParser.STRUCT, 0)

        def getRuleIndex(self):
            return CppDocParser.RULE_classKind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassKind" ):
                listener.enterClassKind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassKind" ):
                listener.exitClassKind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassKind" ):
                return visitor.visitClassKind(self)
            else:
                return visitor.visitChildren(self)




    def classKind(self):

        localctx = CppDocParser.ClassKindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classKind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InheritanceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(CppDocParser.COLON, 0)

        def inheritanceItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppDocParser.InheritanceItemContext)
            else:
                return self.getTypedRuleContext(CppDocParser.InheritanceItemContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CppDocParser.COMMA)
            else:
                return self.getToken(CppDocParser.COMMA, i)

        def getRuleIndex(self):
            return CppDocParser.RULE_inheritance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInheritance" ):
                listener.enterInheritance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInheritance" ):
                listener.exitInheritance(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInheritance" ):
                return visitor.visitInheritance(self)
            else:
                return visitor.visitChildren(self)




    def inheritance(self):

        localctx = CppDocParser.InheritanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_inheritance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(CppDocParser.COLON)
            self.state = 64
            self.inheritanceItem()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 65
                self.match(CppDocParser.COMMA)
                self.state = 66
                self.inheritanceItem()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InheritanceItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(CppDocParser.TypeNameContext,0)


        def accessSpecifier(self):
            return self.getTypedRuleContext(CppDocParser.AccessSpecifierContext,0)


        def getRuleIndex(self):
            return CppDocParser.RULE_inheritanceItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInheritanceItem" ):
                listener.enterInheritanceItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInheritanceItem" ):
                listener.exitInheritanceItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInheritanceItem" ):
                return visitor.visitInheritanceItem(self)
            else:
                return visitor.visitChildren(self)




    def inheritanceItem(self):

        localctx = CppDocParser.InheritanceItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_inheritanceItem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0):
                self.state = 72
                self.accessSpecifier()


            self.state = 75
            self.typeName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppDocParser.ClassMemberContext)
            else:
                return self.getTypedRuleContext(CppDocParser.ClassMemberContext,i)


        def getRuleIndex(self):
            return CppDocParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = CppDocParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 77
                    self.classMember() 
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def accessSection(self):
            return self.getTypedRuleContext(CppDocParser.AccessSectionContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(CppDocParser.MethodDeclarationContext,0)


        def fieldDeclaration(self):
            return self.getTypedRuleContext(CppDocParser.FieldDeclarationContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(CppDocParser.ClassDeclarationContext,0)


        def otherToken(self):
            return self.getTypedRuleContext(CppDocParser.OtherTokenContext,0)


        def getRuleIndex(self):
            return CppDocParser.RULE_classMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassMember" ):
                listener.enterClassMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassMember" ):
                listener.exitClassMember(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassMember" ):
                return visitor.visitClassMember(self)
            else:
                return visitor.visitChildren(self)




    def classMember(self):

        localctx = CppDocParser.ClassMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classMember)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.accessSection()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.methodDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.fieldDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.classDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.otherToken()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def accessSpecifier(self):
            return self.getTypedRuleContext(CppDocParser.AccessSpecifierContext,0)


        def COLON(self):
            return self.getToken(CppDocParser.COLON, 0)

        def getRuleIndex(self):
            return CppDocParser.RULE_accessSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessSection" ):
                listener.enterAccessSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessSection" ):
                listener.exitAccessSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccessSection" ):
                return visitor.visitAccessSection(self)
            else:
                return visitor.visitChildren(self)




    def accessSection(self):

        localctx = CppDocParser.AccessSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_accessSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.accessSpecifier()
            self.state = 91
            self.match(CppDocParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(CppDocParser.PUBLIC, 0)

        def PRIVATE(self):
            return self.getToken(CppDocParser.PRIVATE, 0)

        def PROTECTED(self):
            return self.getToken(CppDocParser.PROTECTED, 0)

        def getRuleIndex(self):
            return CppDocParser.RULE_accessSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessSpecifier" ):
                listener.enterAccessSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessSpecifier" ):
                listener.exitAccessSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccessSpecifier" ):
                return visitor.visitAccessSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def accessSpecifier(self):

        localctx = CppDocParser.AccessSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_accessSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def destructorOrName(self):
            return self.getTypedRuleContext(CppDocParser.DestructorOrNameContext,0)


        def LPAREN(self):
            return self.getToken(CppDocParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CppDocParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(CppDocParser.SEMI, 0)

        def modifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppDocParser.ModifierContext)
            else:
                return self.getTypedRuleContext(CppDocParser.ModifierContext,i)


        def typeName(self):
            return self.getTypedRuleContext(CppDocParser.TypeNameContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(CppDocParser.ParameterListContext,0)


        def CONST(self):
            return self.getToken(CppDocParser.CONST, 0)

        def getRuleIndex(self):
            return CppDocParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = CppDocParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 704) != 0):
                self.state = 95
                self.modifier()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 101
                self.typeName()


            self.state = 104
            self.destructorOrName()
            self.state = 105
            self.match(CppDocParser.LPAREN)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 106
                self.parameterList()


            self.state = 109
            self.match(CppDocParser.RPAREN)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 110
                self.match(CppDocParser.CONST)


            self.state = 113
            self.match(CppDocParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(CppDocParser.TypeNameContext,0)


        def IDENT(self):
            return self.getToken(CppDocParser.IDENT, 0)

        def SEMI(self):
            return self.getToken(CppDocParser.SEMI, 0)

        def getRuleIndex(self):
            return CppDocParser.RULE_fieldDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDeclaration" ):
                listener.enterFieldDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldDeclaration" ):
                listener.exitFieldDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldDeclaration" ):
                return visitor.visitFieldDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def fieldDeclaration(self):

        localctx = CppDocParser.FieldDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_fieldDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.typeName()
            self.state = 116
            self.match(CppDocParser.IDENT)
            self.state = 117
            self.match(CppDocParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CppDocParser.ParameterContext)
            else:
                return self.getTypedRuleContext(CppDocParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CppDocParser.COMMA)
            else:
                return self.getToken(CppDocParser.COMMA, i)

        def getRuleIndex(self):
            return CppDocParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = CppDocParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.parameter()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 120
                self.match(CppDocParser.COMMA)
                self.state = 121
                self.parameter()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(CppDocParser.TypeNameContext,0)


        def IDENT(self):
            return self.getToken(CppDocParser.IDENT, 0)

        def getRuleIndex(self):
            return CppDocParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = CppDocParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.typeName()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 128
                self.match(CppDocParser.IDENT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VIRTUAL(self):
            return self.getToken(CppDocParser.VIRTUAL, 0)

        def STATIC(self):
            return self.getToken(CppDocParser.STATIC, 0)

        def INLINE(self):
            return self.getToken(CppDocParser.INLINE, 0)

        def getRuleIndex(self):
            return CppDocParser.RULE_modifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModifier" ):
                listener.enterModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModifier" ):
                listener.exitModifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModifier" ):
                return visitor.visitModifier(self)
            else:
                return visitor.visitChildren(self)




    def modifier(self):

        localctx = CppDocParser.ModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_modifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 704) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestructorOrNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(CppDocParser.IDENT, 0)

        def TILDE(self):
            return self.getToken(CppDocParser.TILDE, 0)

        def getRuleIndex(self):
            return CppDocParser.RULE_destructorOrName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDestructorOrName" ):
                listener.enterDestructorOrName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDestructorOrName" ):
                listener.exitDestructorOrName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDestructorOrName" ):
                return visitor.visitDestructorOrName(self)
            else:
                return visitor.visitChildren(self)




    def destructorOrName(self):
